feat: linker
# 0) Limpieza (ignora errores si no existen)
Remove-Item .\obj.tam, .\linked.tam, .\program.imp, .\Utils.tam, .\Utils.map -ErrorAction SilentlyContinue

# 1) Compilar el paquete Utils
java -cp .\dist\Triangle.jar Triangle.Compiler .\src\tests\Utils.tri

# 1.1) Renombrar el objeto del paquete a Utils.tam
Rename-Item .\obj.tam .\Utils.tam

# 1.2) Verificar que el mapa del paquete se haya generado
dir Utils.*
Get-Content .\Utils.map

# 2) Compilar el programa que importa Utils
java -cp .\dist\Triangle.jar Triangle.Compiler .\src\tests\UseUtils.tri

# 2.1) Verificar que el compilador haya emitido los imports para el linker
dir program.imp
Get-Content .\program.imp

# 3) Linkear (clase Linker dentro de tu carpeta .\out)
java -cp ".\dist\Triangle.jar;.\out" Triangle.Tools.Linker .\obj.tam

# 4) Ejecutar el binario linkeado
java -cp .\dist\Triangle.jar TAM.Interpreter .\linked.tam